Fix layout for long map names
kz_splopkopsc_loverick_extreme name was so long it broke the profiles layout. Now, the max-width of the maps column is 190px, if name is longer it truncates

--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,10 @@ thead th{
     min-width: 190px !important;
 }
 
+.map-name {
+    max-width: 190px;
+}
+
 .table-top{
     height: 50px;
     background-color: #232323;
